# TalentFlow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md
docs/architecture/: README.md
docs/backlog/: README.md
docs/conventions/: README.md  definition_of_done.md  git_branches.md  git_commits.md
docs/governance/: GOV-01_Charte_de_Gouvernance.md  GOV-02_Politique_Generale_de_Gouvernance.md  GOV-03_Glossaire_Dictionnaire_de_Donnees.md  GOV-04_Referentiel_MDM.md  GOV-05_Registre_des_Regles_de_Gestion.md  GOV-06_Procedures_Operationnelles.md  GOV-07_Registre_des_Decisions_de_Gouvernance.md  README.md
docs/methode/: Methodologie_Cadrage_Projet_V1.md  README.md
docs/projet/: README.md  TalentFlow_Document_Projet_V1.md
src/talentflow/: __init__.py  main.py
tests/: test_main.py
