[project]
name = "talentflow"
version = "0.1.0"
description = "Plateforme IA de recrutement et onboarding RH"
authors = [
    { name = "Dorian Dikoume" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]